--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,7 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body{background-color: azure}
+        h1 {color: blue}
+        p.test {color:green}
+    </style>
 </head>
 <body>
+<h1>Pealkiri</h1>
+<p class="test"></p>
+<a href="https://www.google.com">link </a>
+<ul> /// bullet list
+    <li style="color:red">text 1</li>
+    <li>text 2</li>
+    <li>text 3</li>
+</ul>
+<ol> // number list
+    <li>text 1</li>
+    <li>text 2</li>
+    <li>text 3</li>
+</ol>
+<dl>
+    <dt>text 1</dt> <dd>test</dd>
+    <dt>text 2</dt><dd>test</dd>
+    <dt>text 3</dt><dd>test</dd>
+</dl>
+<table border="1">
+    <tr>
+        <th> tulp1</th>
+        <th> tulp2</th>
+        <th> tulp3</th>
+    </tr>
+    <tr>
+        <td> tulp1</td>
+        <td> tulp2</td>
+        <td> tulp3</td>
+    </tr>
+    <tr>
+        <td><input> tulp1</td>
+        <td> tulp2<input type="password"> </td>
+        <td> <a href="https://www.google.com">link </a> tulp3</td>
+    </tr>
+</table>
+Eesnimi
+<input>
+Perekonnanimi
+<input>
+Sünniaasta
+<select>
+<option>1990</option>
+<option>1991</option>
+<option>1992</option>
+<option>1993</option>
+</select>
+Vali sugu
+<input type="radio" name="mees"> mees
+<input type="radio" name="naine"> naine
 </body>
 </html>
