--- a/src/main/resources/public/bankAccount.html
+++ b/src/main/resources/public/bankAccount.html
@@ -3,27 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Bank</title>
+    <style>
+        body{background-color: lightgray}
+        div{ border: 0.5rem outset pink;
+            outline: 0.5rem solid khaki;
+            box-shadow: 0 0 0 2rem skyblue;
+            border-radius: 12px;
+            font: bold 1rem Seravek;
+            margin: 2rem;
+            padding: 1rem;
+            outline-offset: 0.5rem;
+        }
+    </style>
 </head>
 <body>
 <h1> Pank </h1>
 <h2> Tere tulemast Panka </h2>
+<div>
 <h4> Loo konto </h4>
-Sisesta eesnimi ja perekonnanimi <input>
+<strong>Sisesta eesnimi ja perekonnanimi</strong> <input>
 <br>
-Sisesta kontornumber <input>
+<strong>Sisesta kontonumber</strong> <input>
 <br>
-Sisesta kontoseis <input>
+<strong>Sisesta kontoseis</strong> <input>
 <br>
 <button type="submit">
     Loo konto
 </button>
+</div>
 <br>
+<hr>
 <h4> Vaata kontoseisu </h4>
 Sisesta kontonumber <input>
+<hr>
 <h4> Tee kontole sissemakse </h4>
 Sisesta kontonumber <input>
+<hr>
 <h4> Tee kontolt väljamakse </h4>
 Sisesta kontonumber <input>
+<hr>
+<h4> Tee ülekanne </h4>
+Tee ülekanne kontolt <input>
+<br>
+Kontole <input>
+<br>
+Ülekande summa <input>
 
 </body>
 </html>
