--- a/src/main/resources/public/bankAccount.html
+++ b/src/main/resources/public/bankAccount.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <title>Bank</title>
     <style>
-        body{background-color: lightgray}
-        div{ border: 0.5rem outset pink;
-            outline: 0.5rem solid khaki;
-            box-shadow: 0 0 0 2rem skyblue;
-            border-radius: 12px;
+        body{background-color: lightgray;
+        background:linear-gradient(lightgray, lightslategray );
+        }
+        div{ border: 0.5rem outset midnightblue;
+            border-radius: 9px;
             font: bold 1rem Seravek;
             margin: 2rem;
             padding: 1rem;
             outline-offset: 0.5rem;
+            text-align: -webkit-right;
+            display: block;
+            float: left;
+
         }
     </style>
 </head>
