--- a/src/main/resources/public/bankAccount.html
+++ b/src/main/resources/public/bankAccount.html
@@ -16,7 +16,6 @@
             text-align: -webkit-right;
             display: block;
             float: left;
-
         }
     </style>
 </head>
@@ -25,12 +24,13 @@
 <h2> Tere tulemast Panka </h2>
 <div>
 <h4> Loo konto </h4>
+    <p>
 <strong>Sisesta eesnimi ja perekonnanimi</strong> <input>
 <br>
 <strong>Sisesta kontonumber</strong> <input>
 <br>
-<strong>Sisesta kontoseis</strong> <input>
-<br>
+<label>Sisesta kontoseis</label> <input>
+    </p>
 <button type="submit">
     Loo konto
 </button>
@@ -44,6 +44,7 @@ Sisesta kontonumber <input>
 Sisesta kontonumber <input>
 <hr>
 <h4> Tee kontolt väljamakse </h4>
+<p>
 Sisesta kontonumber <input>
 <hr>
 <h4> Tee ülekanne </h4>
@@ -52,6 +53,7 @@ Tee ülekanne kontolt <input>
 Kontole <input>
 <br>
 Ülekande summa <input>
+</p>
 
 </body>
 </html>
